spacing issue fixed for planning dashboard

--- a/Levis-Dashboard-Light/scss/light-mode.scss
+++ b/Levis-Dashboard-Light/scss/light-mode.scss
@@ -1203,6 +1203,7 @@ ul.sapUshellInner {
                             border: 1.05px solid #EEECEC;
                             border-radius: 7.64px;
                             background-color: #FBFCFE;
+                            padding: 20px 25px;
                             > .sapuiVltCell{
                                 padding-bottom: 0px;
                                 outline: none;
@@ -1262,6 +1263,7 @@ ul.sapUshellInner {
                             border: 1.05px solid #EEECEC;
                             border-radius: 7.64px;
                             background-color: #FBFCFE;
+                            padding: 20px 25px;
                             > .sapuiVltCell{
                                 padding-bottom: 0px;
                                 outline: none;
@@ -1358,6 +1360,7 @@ ul.sapUshellInner {
                             border: 1.05px solid #EEECEC;
                             border-radius: 7.64px;
                             background-color: #FBFCFE;
+                            padding: 20px 25px;
                             > .sapuiVltCell{
                                 padding-bottom: 0px;
                                 outline: none;
@@ -1369,9 +1372,6 @@ ul.sapUshellInner {
                                         font-weight: bold;
                                         letter-spacing: 0;
                                         line-height: 19px;
-                                    }
-                                    @media (max-width: 767px){
-                                        padding-top: 20px;
                                     }
                                 }
                                 &:nth-child(2){
@@ -1462,6 +1462,7 @@ ul.sapUshellInner {
             > .sapUiVlt.sapuiVlt{
                 padding-left: 0;
                 padding-right: 28px;
+                padding-bottom: 16px;
                 .sapUiVltCell.sapuiVltCell{
                     /*links*/
                     .columns{
@@ -1525,11 +1526,14 @@ ul.sapUshellInner {
             }
             &:nth-child(2) {
                 width: 50% !important;
+                .sapUiVlt.sapUiContentPadding{
+                    padding-right: 24px;
+                }
             }
             &:last-child {
                 width: 50% !important;
                 display: block;
-                padding: 0 24px;
+                padding: 0 24px 16px;
                 .sapUiVlt.sapUiContentPadding{
                     padding-top: 0;
                 }
@@ -1552,6 +1556,7 @@ ul.sapUshellInner {
             }
             &:last-child {
                 width: 100% !important;
+                padding-bottom: 16px;
                 .sapUiVlt.sapUiContentPadding{
                     padding: 0 36px 15px 12px
                 }
